# pytorch-cpp-tensorrt

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
datasets/: dataset.h5  labels.pickle
datasets/clean_dataset/: labels.pickle
notebooks/: 1_dataset_preprocessing.ipynb  2_model_creation.ipynb  3_model_evaluation.ipynb  4_model_onnx_conversion.ipynb  5_model_tensorrt.ipynb  dataset_preprocessing.ipynb  fruits_pytorch_model.ipynb  model_creation.ipynb  model_onnx_conversion.ipynb  model_tensorrt.ipynb  model_transformation.ipynb
src/: trt_engine.cpp  trt_engine.h
src/utils/: logger.cpp  logger.h  trt_destroy.h
